# cardboard

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: create_release.yml  publish_npm.yml  publish_pypi.yml  publish_test_pypi.yml
build_utils/: update_dependencies.py  update_versions.py
cardboard/: __init__.py  blueprints.py  cardboard.py  cards.py  serial.py  server.py  sockets.py
cardboard/blueprints/: cardboard.py
cardboard/static/css/: styles.css
cardboard/templates/: base.html  index.html  test.html
cardboard_ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
cardboard_ui/src/: Board.css  Board.jsx  Card.css  Card.jsx  Column.css  Column.jsx  DataCard.css  DataCard.jsx  FormCard.css  FormCard.jsx  PlotCard.css  PlotCard.jsx  index.css  index.jsx  main.jsx
examples/: app.py
tests/data/: cards.json  weather.json
