[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardboard"
version = "0.1.0"
description = "A React UI for data dashboards"
readme = "README.md"
readme-content-type = "text/markdown"
authors = [
    {name = "Jason Kwan", email = "jasnkwan@gmail.com"}
]
dependencies = [
    "Flask>=2.0"
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
Homepage = "https://github.com/jasnkwan/cardboard"
Repository = "https://github.com/jasnkwan/cardboard.git"

[tool.setuptools]
packages = ["cardboard"]
include-package-data = true
